# Alfa-Eco-System-Open-claw-RIP-

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  alfa_demo.py  pyproject.toml
docs/: ALFA_WOW_DEMO.md  ARCHITECTURE.md  BIELIK_PARTNERSHIP.md  DEPLOYMENT_MODES.md  FILTER_ORCHESTRATOR.md  IP_AND_ACCESS_MODEL.md  README_PL.md  SECURITY_DISCLOSURE_BOUNDARY.md  VALIDATED_LINEAGE.md
src/alfa/: __init__.py  bootstrap.py
src/alfa/backends/: __init__.py  base.py  builtin.py  registry.py
src/alfa/console/: __init__.py  demo.py  service.py
src/alfa/core/: __init__.py  brain.py  core_lock_logger.py  filter_contract.py  filter_orchestrator.py  policy.py  router.py  state_machine.py
src/alfa/guard/: __init__.py  cerber.py
src/alfa/memory/: __init__.py  layer.py
src/alfa/plugins/: __init__.py  base.py  builtin.py  registry.py
src/alfa/shared/: __init__.py  events.py  policies.py  schemas.py
src/alfa/voice/: __init__.py  gateway.py
tests/: __init__.py  test_alfa_demo_cli.py  test_alfa_proof_repo.py  test_filter_contract.py  test_filter_orchestrator.py
